--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,52 @@
 * {
   margin: 0px;
-  padding: 0 px;
+  padding: 10px;
   box-sizing: border-box;
 }
-.extarnal {
-  background-color: #333;
+
+#covar {
+  height: 50vh;
+  background-image: url(https://images.unsplash.com/photo-1750779940698-f24b28d76fd9?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 5px;
 }
+.external {
+  background-color: #09e0ce;
+}
+
 .para {
-  display: flex;
   margin-left: 10px;
   padding: 5px;
+  display: flex;
+  /* flex-direction: colomn*/
+  gap: 10px;
+}
+p {
+  margin: 15px;
+}
+h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: italic;
+  background-color: #09e0ce;
+  text-align: center;
+  color: azure;
+}
+
+div,
+p,
+img {
+  border: 5px solid black;
+  margin: 5px;
+  border-radius: 10%;
+  box-shadow: 2px 2px #000000;
+}
+
+.footer {
+  height: 7vh;
+  background-color: black;
+  color: #09e0ce;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
