--- a/styles/similar.css
+++ b/styles/similar.css
@@ -1,5 +1,32 @@
+body {
+  /* max-width: fit-content; */
+  box-sizing: border-box;
+  margin: 10px 50px;
+  justify-content: center;
+}
 img {
   width: 500px;
   height: auto;
   margin: 15px;
+}
+
+form {
+  margin: 0 50px;
+}
+
+.feedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+input {
+  height: 15px;
+  width: 200px;
+}
+button {
+  width: 75px;
+  background-color: aqua;
+  color: black;
+  font-weight: bolder;
+  border-radius: 5px;
 }
