--- a/styles/form.css
+++ b/styles/form.css
@@ -25,5 +25,11 @@ select {
   margin-top: 20px;
 }
 input[type="submit"] {
-  /* background: #000; */
+  background-color: aquamarine;
+  margin-top: 10px;
+  padding: 5px 0px;
+  font-weight: 700;
+  font-size: 18px;
+  color: black;
+  border-radius: 5px;
 }
