--- a/styles/form.css
+++ b/styles/form.css
@@ -1,6 +1,6 @@
 body {
   /* max-width: 1140px; */
-  margin: 15px;
+  margin: 0px 200px;
   align-items: center;
 }
 h1 {
@@ -15,16 +15,16 @@ label {
   font-weight: 600;
   align-items: center;
 }
-input {
-  width: 40%;
-}
+input,
 textarea {
-  width: 50%;
+  width: 75%;
 }
+
 select {
   margin-top: 20px;
 }
 input[type="submit"] {
+  width: 25%;
   background-color: aquamarine;
   margin-top: 10px;
   padding: 5px 0px;
